Packages_2024/gsl_2.7.1/gsl/gsl_sf_debye.inc

{$IFDEF read_interface}


function gsl_sf_debye_1_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_1(x: Tdouble): Tdouble; cdecl; external libgsl;
function gsl_sf_debye_2_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_2(x: Tdouble): Tdouble; cdecl; external libgsl;
function gsl_sf_debye_3_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_3(x: Tdouble): Tdouble; cdecl; external libgsl;
function gsl_sf_debye_4_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_4(x: Tdouble): Tdouble; cdecl; external libgsl;
function gsl_sf_debye_5_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_5(x: Tdouble): Tdouble; cdecl; external libgsl;
function gsl_sf_debye_6_e(x: Tdouble; result: Pgsl_sf_result): longint; cdecl; external libgsl;
function gsl_sf_debye_6(x: Tdouble): Tdouble; cdecl; external libgsl;

// === Konventiert am: 22-8-25 14:04:20 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
